--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # production
 /build
 
+
 # misc
 .DS_Store
 .env.local
@@ -21,7 +22,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+package-lock.json
 
 git rm file.txt                   # remove the file
 echo 'file.txt' >> .gitignore     # append file to .gitignore
