--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.6",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "d3-ease": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-chartjs-2": "^4.0.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-move": "^6.5.0",
