--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-image-fallback": "^8.0.0",
     "react-move": "^6.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-scripts": "5.0.0",
