--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-hook/window-size": "^3.0.7",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-image-fallback": "^8.0.0",
     "react-move": "^6.5.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
